Fix contaxt form on mobile

--- a/widgets/contact-form.css
+++ b/widgets/contact-form.css
@@ -15,3 +15,13 @@
     border: 2px solid var(--color-primary-dark);
     padding: 0.5rem;
 }
+
+/* Janky Hack Mate: For some reason, the inputs want to grow below 555px... */
+@media screen and (max-width: 555px) {
+    .contact-form form>input,
+    .contact-form form>textarea {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
